--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -1,26 +1,28 @@
 ktor {
-    environment = ${?KTOR_ENV}
+    environment = ${?BAKERY_KTOR_ENV}
+    development = ${?BAKERY_KTOR_DEV}
     deployment {
-        port = ${?SERVER_PORT}
-        host = ${?SERVER_HOST}
-        domain = ${?BASE_URL}
+        port = ${?BAKERY_SERVER_PORT}
+        host = ${?BAKERY_SERVER_HOST}
+        domain = ${?BAKERY_BASE_URL}
+        watch = [ classes, resources ]
     }
     application {
         modules = [ com.bakery.server.ApplicationKt.module ]
     }
     jwt {
-        secret = ${?JWT_SECRET}
-        issuer = ${?JWT_ISSUER}
-        audience = ${?JWT_AUDIENCE}
-        realm = ${?JWT_REALM}
+        secret = ${?BAKERY_JWT_SECRET}
+        issuer = ${?BAKERY_JWT_ISSUER}
+        audience = ${?BAKERY_JWT_AUDIENCE}
+        realm = ${?BAKERY_JWT_REALM}
     }
     database {
-        jdbc_url = ${?JDBC_URL}
-        jdbc_class_name = ${?JDBC_CLASS_NAME}
-        username = ${?DB_USERNAME}
-        password = ${?DB_PASSWORD}
-        pool_size = ${?POOL_SIZE}
-        auto_commit = ${?IS_AUTO_COMMIT}
-        transaction_isolation = ${?TRANSACTION_ISOLATION}
+        jdbc_url = ${?BAKERY_JDBC_URL}
+        jdbc_class_name = ${?BAKERY_JDBC_CLASS_NAME}
+        username = ${?BAKERY_DB_USERNAME}
+        password = ${?BAKERY_DB_PASSWORD}
+        pool_size = ${?BAKERY_POOL_SIZE}
+        auto_commit = ${?BAKERY_IS_AUTO_COMMIT}
+        transaction_isolation = ${?BAKERY_TRANSACTION_ISOLATION}
     }
 }
